Inject Omdb Api key via options

--- a/src/JE.App/appsettings.json
+++ b/src/JE.App/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "OmdbOptions": {
+    "ApiKey": "e9dd81f6"
+  }
 }
