--- a/src/JE.App/JE.App.csproj
+++ b/src/JE.App/JE.App.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Scrutor" Version="3.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\JE.Infrastructure\JE.Infrastructure.csproj" />
   </ItemGroup>
 
