--- a/src/JE.Infrastructure/JE.Infrastructure.csproj
+++ b/src/JE.Infrastructure/JE.Infrastructure.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Flurl.Http" Version="2.4.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\JE.Core\JE.Core.csproj" />
   </ItemGroup>
 
