--- a/src/JE.App/JE.App.csproj
+++ b/src/JE.App/JE.App.csproj
@@ -14,7 +14,9 @@
     <PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
     <PackageReference Include="ReactiveUI" Version="9.20.1" />
     <PackageReference Include="ReactiveUI.Fody" Version="9.20.1" />
+    <PackageReference Include="ReduxSimple" Version="2.0.1" />
     <PackageReference Include="Scrutor" Version="3.1.0" />
+    <PackageReference Include="System.Reactive.Linq" Version="4.1.6" />
   </ItemGroup>
 
   <ItemGroup>
