--- a/src/JE.App/JE.App.csproj
+++ b/src/JE.App/JE.App.csproj
@@ -16,7 +16,8 @@
     <PackageReference Include="ReactiveUI.Fody" Version="10.5.7" />
     <PackageReference Include="ReduxSimple" Version="3.0.0" />
     <PackageReference Include="Scrutor" Version="3.1.0" />
-    <PackageReference Include="System.Reactive.Linq" Version="4.2.0" />
+    <PackageReference Include="System.Reactive" Version="4.2.0" />
+    <PackageReference Include="System.Reactive.Compatibility" Version="4.2.0" />
   </ItemGroup>
 
   <ItemGroup>
